Restpect convention PEP8 + supression main.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ jupyter
 jupyter-client
 jupyter-console
 jupyter-core
-matplotlib
+matplotlib~=3.8.1
 notebook
-numpy
-scikit-learn
-scipy
-pandas
+numpy~=1.26.1
+scikit-learn~=1.3.2
+scipy~=1.11.3
+pandas~=2.1.3
 virtualenv
 tqdm
-torch
+torch~=2.1.1
+Pillow~=10.1.0
+torchvision~=0.16.1
